--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,13 +32,13 @@
   //   {"devDependencies": true}
   // ],
   "rules": {   
-    "react/jsx-one-expression-per-line": "literal",
+    "react/jsx-one-expression-per-line": [0, { "allow": "single"}],
     "react/prop-types": "off",
     "semi": "off",
     "@typescript-eslint/semi": "error",
     "linebreak-style": 0,
     "no-unused-vars": "warn",
-    "react/jsx-filename-extension": [0],   
+    "react/jsx-filename-extension": [0],
     "import/extensions": [
       "error",
       "ignorePackages",
