--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mathjs": "^9.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.2.3",
     "web-vitals": "^1.1.1"
