--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,7 +32,11 @@
   //   {"devDependencies": true}
   // ],
   "rules": {   
-    "react/jsx-one-expression-per-line": [0, { "allow": "single"}],
+    "max-len":  ["error", { "code": 160 }],
+    "react/jsx-one-expression-per-line": [0, { "allow": "single"}],    
+    "jsx-a11y/no-noninteractive-element-interactions": "off",
+    "jsx-a11y/no-static-element-interactions": "off",
+    "jsx-a11y/click-events-have-key-events": "off",
     "react/prop-types": "off",
     "semi": "off",
     "@typescript-eslint/semi": "error",
