--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://calc-hours.com",
   "name": "time-calculator",
   "version": "0.1.0",
   "private": true,
@@ -12,9 +13,11 @@
     "@types/react-dom": "^17.0.3",
     "mathjs": "^9.3.0",
     "react": "^17.0.2",
+    "react-date-picker": "^8.1.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-scripts": "4.0.3",
+    "react-time-picker": "^4.2.1",
     "typescript": "^4.2.3",
     "web-vitals": "^1.1.1"
   },
@@ -44,6 +47,7 @@
   },
   "devDependencies": {
     "@types/mathjs": "^6.0.11",
+    "@types/react-time-picker": "^4.0.1",
     "@typescript-eslint/eslint-plugin": "^4.20.0",
     "@typescript-eslint/parser": "^4.20.0",
     "eslint": "^7.23.0",
