--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://calc-hours.com",
+  "homepage": ".",
   "name": "time-calculator",
   "version": "0.1.0",
   "private": true,
